# world-cup-26-oracle

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
data/: backtest.json
data/manual/: match_updates.csv  player_callups.csv  team_adjustments.csv
data/processed/: fixtures.csv  model_params.json  teams.csv
data/raw/: fixtures.csv  fixtures_template.csv  teams.csv  teams_template.csv
data/snapshots/: latest.json  prediction_20260611T235900Z.json  prediction_20260612T235900Z.json  prediction_20260613T235900Z.json  prediction_20260614T235900Z.json  prediction_20260615T235900Z.json  prediction_20260616T235900Z.json  prediction_20260617T235900Z.json  prediction_20260618T235900Z.json  prediction_20260619T235900Z.json  prediction_20260620T235900Z.json  prediction_20260621T235900Z.json  prediction_20260622T235900Z.json  prediction_20260623T235900Z.json  prediction_20260624T235900Z.json  prediction_20260625T235900Z.json  prediction_20260626T235900Z.json  prediction_20260627T235900Z.json  prediction_20260628T235900Z.json  prediction_20260629T235900Z.json  prediction_20260630T235900Z.json  prediction_20260701T235900Z.json  (+12 more)
docs/: data-pipeline.md  deployment.md  methodology.md  official-fifa-data.md  portfolio-checklist.md
scripts/: build_site.py  serve_site.py
tests/: test_app_helpers.py  test_backtest.py  test_bracket.py  test_data_io.py  test_data_pipeline.py  test_engine.py  test_fifa_official.py  test_historical.py  test_models.py  test_player_callups.py  test_scaffold.py  test_simulation.py  test_snapshots.py
web/: index.html
(+18 files in other folders)
