[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-26-oracle"
version = "0.1.0"
description = "A Python and Streamlit predictor for the 2026 World Cup."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Iat Long Guan" }]
# Kept lean on purpose: the model is pure stdlib, and the browser (stlite)
# build downloads every dependency as a Pyodide wheel.
dependencies = [
    "pandas>=2.2",
    "plotly>=5.22",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
world-cup-oracle = "world_cup_oracle.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
